@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 
 --- PyFMI-X.X ---
+    * Added option to limit the maximum size of the log file (ticket:5089)
     * Fixed memory leak when getting the dependency information (ticket:5553)
     * Deprecated get_log_file_name in favour of get_log_filename (ticket:5548)
     * Implemented support for injecting custom logging functionality (ticket:5545)
